; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_bond.c_interface_media_info.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_bond.c_interface_media_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.media_info = type { i64, i32, i32, i32, i32 }
%struct.ifnet = type { i32 }
%struct.ifmediareq = type { i64, i32, i32, i32, i32 }

@SIOCGIFMEDIA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.media_info*, %struct.ifnet*)* @interface_media_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @interface_media_info(%struct.media_info* noalias sret %0, %struct.ifnet* %1) #0 {
  %3 = alloca %struct.ifnet*, align 8
  %4 = alloca %struct.ifmediareq, align 8
  store %struct.ifnet* %1, %struct.ifnet** %3, align 8
  %5 = call i32 @bzero(%struct.media_info* %0, i32 24)
  %6 = bitcast %struct.ifmediareq* %4 to %struct.media_info*
  %7 = call i32 @bzero(%struct.media_info* %6, i32 24)
  %8 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %9 = load i32, i32* @SIOCGIFMEDIA, align 4
  %10 = bitcast %struct.ifmediareq* %4 to %struct.media_info*
  %11 = call i64 @ifnet_ioctl(%struct.ifnet* %8, i32 0, i32 %9, %struct.media_info* %10)
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %25

13:                                               ; preds = %2
  %14 = getelementptr inbounds %struct.ifmediareq, %struct.ifmediareq* %4, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %13
  %18 = getelementptr inbounds %struct.ifmediareq, %struct.ifmediareq* %4, i32 0, i32 3
  %19 = load i32, i32* %18, align 8
  %20 = getelementptr inbounds %struct.media_info, %struct.media_info* %0, i32 0, i32 4
  store i32 %19, i32* %20, align 4
  %21 = getelementptr inbounds %struct.ifmediareq, %struct.ifmediareq* %4, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = getelementptr inbounds %struct.media_info, %struct.media_info* %0, i32 0, i32 2
  store i32 %22, i32* %23, align 4
  br label %24

24:                                               ; preds = %17, %13
  br label %25

25:                                               ; preds = %24, %2
  ret void
}

declare dso_local i32 @bzero(%struct.media_info*, i32) #1

declare dso_local i64 @ifnet_ioctl(%struct.ifnet*, i32, i32, %struct.media_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
